<resources>
    <string name="app_name">Verasys Esign</string>
    <string name="selectpdf">Pdf file is not Selected</string>
    <string name="no_data">Page details Not added.</string>
    <string name="select_file">Browse and Upload</string>
    <string name="calculate_hash">Proceed</string>
    <string name="add_more">Add Page Details</string>
    <string name="add_note">Click on add to add page details.</string>
    <string name="save">Save Details</string>
    <string name="clear">Clear Details</string>
    <string name="company_tag">India\'s leading DSC and eSign Certifying Authority</string>
    <string name="aspId">VSYSTEST</string>
    <string name="authMode">1</string>
    <string name="ver">2.1</string>
    <string name="pfxPassword">abc1234</string>
    <string name="pfxAlias">vsign - test certificate - class ii organization 2 year signature</string>
    <string name="redirect_url">http://localhost:55691/esignresposen.aspx</string>
    <string name="file_type">path</string>
    <string name="docUrl">"https://esign.verasys.in/"</string>
    <string name="reason">Signed by User</string>
    <string name="signingAlgorithm">RSA</string>
    <string name="maxWaitPeriod">1440</string>


    <string name="ASPBASEURL">"https://drona-be-stg.corecotechnologies.com/"</string>
    <string name="ESPBASEURL">"https://esignuat.vsign.in/asp/esign/2.1/signature"</string>
    <string name="callback_url_name">verasys/doCallback</string>
    <string name="response_url_name">verasys/getCallbackXMLDetails</string>

    <string name="pfx_file_name">"vsign_test_certificate.pfx"</string>
    <string name="tick_image_file_name">"tickimage.png"</string>
    <string name="info_file_path">"/Signature Pdf Details/SignedInfo"</string>
    <string name="dest_file_path">"/Signature Pdf Details/SignedPDF"</string>
    <string name="dest_file_name">"tempSign.pdf"</string>
    <string name="info_file_name">"tempInfoFile.txt"</string>

</resources>