<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Activities.PdfSelectionActivity">

    <TextView
        android:id="@+id/textSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:singleLine="true"
        android:text="@string/selectpdf"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSelect"
        android:background="@drawable/button_background"
        android:drawableStart="@android:drawable/stat_sys_upload"
        android:text="@string/select_file"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:typeface="serif"
        app:backgroundTint="@null"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:layout_below="@+id/buttonSelect"
        android:typeface="sans"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:layout_below="@+id/textUri"
        android:typeface="sans"
        android:textSize="18sp" />


    <LinearLayout
        android:id="@+id/linearMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textPath">
    <TextView
        android:id="@+id/textMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:typeface="sans"
        android:layout_margin="5dp"
        android:text="@string/add_note"
        android:textColor="@color/purple_700"
        android:textSize="15sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
       android:layout_margin="5dp"
        android:background="@drawable/button_background"
        android:text="@string/add_more"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:typeface="serif"
        app:backgroundTint="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_below="@+id/linearMore">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@color/design_default_color_on_primary"
        android:padding="5dp"
        android:scrollbars="vertical">

    </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/textNoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/no_data"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCalculateHash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@null"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_background"
        android:text="@string/calculate_hash"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:typeface="serif"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textHash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:typeface="sans" />

</RelativeLayout>